--- a/app/src/main/res/layout/activity_detalhes_encotrado.xml
+++ b/app/src/main/res/layout/activity_detalhes_encotrado.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/lightBlue"
     tools:context=".activity.DetalhesEncotradoActivity">
 
 
@@ -12,11 +13,11 @@
         android:id="@+id/tbDetalhes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/lightBlue"
+        android:background="@android:color/white"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:title="@string/barDetalhes"
-        app:titleTextColor="@android:color/white" />
+        app:titleTextColor="@android:color/black" />
 
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
@@ -66,6 +67,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="2dp"
             android:text="@string/objData"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="18sp" />
@@ -88,6 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:layout_weight="1"
+                android:textColor="@android:color/black"
                 android:text="Nome da pessoa"
                 android:textSize="14sp" />
 
@@ -96,6 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:layout_gravity="center"
+                android:textColor="@android:color/black"
                 android:gravity="center"
                 android:text="+ Info" />
 
@@ -126,6 +130,7 @@
                 android:paddingBottom="2dp">
 
                 <TextView
+                    android:textColor="@android:color/black"
                     android:id="@+id/textView17"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,6 +139,7 @@
 
                 <TextView
                     android:id="@+id/txQtdItensEnc"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -166,11 +172,13 @@
                     android:id="@+id/textView19"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
                     android:layout_weight="1"
                     android:text="@string/dataEncontrados" />
 
                 <TextView
                     android:id="@+id/txDiaEncotrados"
+                    android:textColor="@android:color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -197,6 +205,7 @@
                     android:id="@+id/textView21"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@android:color/black"
                     android:text="Postado há:" />
 
                 <TextView
@@ -204,6 +213,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical|end"
+                    android:textColor="@android:color/black"
                     android:text="2" />
 
 
